--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,33 @@
     <string name="dashboard">Dashboard</string>
     <string name="chickenjoy">ChickenJoy</string>
     <string name="profile_pic">profile_pic</string>
+    <string name="pilih">Pilih</string>
+    <string name="batal">Batal</string>
+    <string name="bersihkan">Bersihkan</string>
+    <string name="invoice">Invoice</string>
+    <string name="masukan_nama_pembeli">Masukan nama pembeli</string>
+    <string name="daftar_pesanan">Daftar Pesanan</string>
+    <string name="subtotal">Subtotal</string>
+    <string name="ppn_10">PPN 10%</string>
+    <string name="_0">0</string>
+    <string name="lanjutkan_ke_pembayaran">Lanjutkan Ke Pembayaran</string>
+    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
+    <string name="qris">QRIS</string>
+    <string name="tunai">Tunai</string>
+    <string name="total_yang_dibayar">Total Yang Dibayar</string>
+    <string name="konfirmasi_pembayran">Konfirmasi Pembayaran</string>
+    <string name="transaksi_berhasil">Transaksi Berhasil</string>
+    <string name="sedang_mencetak_nota">Sedang Mencetak Nota</string>
+    <string name="nota_berhasil_dicetak">Nota Berhasil Dicetak</string>
+    <string name="kembali_ke_dashboard">Kembali Ke Dashboard</string>
+    <string name="menu_saya">Menu Saya</string>
+    <string name="daftar_menu">Daftar Menu</string>
+    <string name="tambah">Tambah</string>
+    <string name="tambah_menu_baru">Tambah Menu Baru</string>
+    <string name="tambah_menu">Tambah Menu</string>
+    <string name="hapus_menu">Hapus Menu</string>
+    <string name="apakah_anda_yakin_ingin_menghapus_menu_ini_dari_daftar">Apakah anda yakin ingin menghapus menu ini dari daftar ?</string>
+    <string name="hapus">Hapus</string>
+    <string name="simpan_perubahan">Simpan Perubahan</string>
+    <string name="edit_menu">Edit Menu</string>
 </resources>
