--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="hapus">Hapus</string>
     <string name="simpan_perubahan">Simpan Perubahan</string>
     <string name="edit_menu">Edit Menu</string>
+    <string name="ubah">Ubah</string>
 </resources>
