--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="masuk">Masuk</string>
+    <string name="cetak_nota">Cetak Nota</string>
 </resources>
