--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,8 @@
     <string name="password">Password</string>
     <string name="masuk">Masuk</string>
     <string name="cetak_nota">Cetak Nota</string>
+    <string name="apakah_anda_yakin_ingin_keluar_dari_akun_ini">Apakah anda yakin ingin keluar dari akun ini?</string>
+    <string name="ya_keluar">Ya, Keluar</string>
+    <string name="tidak_menemukan_hasil">Tidak Menemukan Hasil</string>
+    <string name="harap_mencoba_menggunakan_kata_kunci_lain_apabila_anda_tidak_dapat_menemukan_menu_yang_dicari">Harap mencoba menggunakan kata kunci lain apabila Anda tidak dapat menemukan menu yang dicari.</string>
 </resources>
