menu page sudah tampilkan semua menu dan filter sudah jalan tinggal crud nya

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="ya_keluar">Ya, Keluar</string>
     <string name="tidak_menemukan_hasil">Tidak Menemukan Hasil</string>
     <string name="harap_mencoba_menggunakan_kata_kunci_lain_apabila_anda_tidak_dapat_menemukan_menu_yang_dicari">Harap mencoba menggunakan kata kunci lain apabila Anda tidak dapat menemukan menu yang dicari.</string>
+    <string name="edit">Edit</string>
 </resources>
