--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,6 @@
     <string name="pendapatan">Pendapatan</string>
     <string name="belum_ada_riwayat_penjualan">Belum Ada Riwayat Penjualan</string>
     <string name="anda_tidak_mempunyai_riwayat_penjualan_item_apapun">Anda tidak mempunyai riwayat penjualan item apapun.</string>
+    <string name="tambah_karyawan">Tambah Karyawan</string>
+    <string name="konfirmasi_password">Konfirmasi Password</string>
 </resources>
