fixed small bugs and update life quality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,7 @@
     <string name="anda_tidak_mempunyai_riwayat_penjualan_item_apapun">Anda tidak mempunyai riwayat penjualan item apapun.</string>
     <string name="tambah_karyawan">Tambah Karyawan</string>
     <string name="konfirmasi_password">Konfirmasi Password</string>
+    <string name="tambah_karyawan_baru">Tambah Karyawan Baru</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
 </resources>
