--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="tambah_karyawan_baru">Tambah Karyawan Baru</string>
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
+    <string name="username">Username</string>
 </resources>
